# autobright

./: .gitignore  .pre-commit-config.yaml  Measurement Analysis.ipynb  architecture.plantuml  brightness  brightness-bin  brightness-ng.py  ddc-save-brightness  measurements_2.js  pyproject.toml
autobright/: __main__.py  colorhugals.py  config.py  core.py  ddccontrol.py  models.py  qtgui.py  webui.py
externalbrightness/: __main__.py  colorhugals.py  ddccontrol.py  model.py
