[tool.poetry]
name = "autobright"
version = "0.1.0"
description = "Automatically adjust display brightness with external sensor"
authors = ["Martin Ueding <mu@martin-ueding.de>"]
license = "MIT"

[tool.poetry.scripts]
autobright = "autobright.__main__:main"
autobright-qt = "autobright.qtgui:main"

[tool.poetry.dependencies]
python = "^3.8,<3.11"
appdirs = "^1.4.4"
PyQt6 = "^6.3.0"
scipy = "^1.8.0"
pandas = "^1.4.2"

[tool.poetry.dev-dependencies]
pytest = "^7.1.2"
mypy = "^0.950"
black = "^22.3.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"